package nl.saxion.records;

public record Print() {
}
