package nl.saxion.records;

public record Printer() {
}
