package nl.saxion.utils;

public enum FilamentType {
    PLA, PETG, ABS
}
